# WechatBot

Release/: wechat.ini
wechat-bot-master/: CMakeLists.txt
wechat-bot-master/Gui/wechatbot-wechatbot/: WeChatBot.vcxproj  WeChatBot.vcxproj.filters  packages.config
wechat-bot-master/Gui/wechatbot-wechatbot/Debug/WeChatBot.tlog/: CL.10492.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  WeChatBot.lastbuildstate
wechat-bot-master/client/: client-3.2.1.121.js  client.js  http-3.2.1.121.js  httpclient.js
wechat-bot-master/client/c#/WeChatGooForNet/: Chatroom.cs  Contact.cs  User.cs  WeChatGooForNet.csproj  WeChatSDK.cs  Win32API.cs
wechat-bot-master/client/c#/WeChatGooForNet/Properties/: AssemblyInfo.cs
wechat-bot-master/client/java/src/main/java/pro/mickey/wechatpush/service/: TestService.java  WeChatPushService.java
wechat-bot-master/client/java/src/main/java/pro/mickey/wechatpush/service/dto/: WeChatMsgDTO.java
wechat-bot-master/client/java/src/main/resources/: application.yml
wechat-bot-master/client/python/: Gui.py  GuiWindow.py  TkinterPractice.py  backup.py  client.py  httpclient.py  msg_server.py  readpic.py  test.py
wechat-bot-master/client/qt_c++/: CMakeLists.txt
